# OptiMac-Pro

./: .gitignore  DEEP_MACOS_INTEGRATION_SUMMARY.md  DESIGN_SYSTEM.md  FEATURES.md  FINAL_IMPLEMENTATION_SUMMARY.md  FINAL_MACOS_INTEGRATION_REPORT.md  FINAL_SUMMARY.md  IMPLEMENTATION.md  PRODUCTION_READY.md  PROJECT_COMPLETION_SUMMARY.md  QUICK_START_COMMANDS.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.json  vite.config.js  vite.config.js.bak  vite.config.ts
src/: App.css  App.jsx  App.tsx  index.css
src-tauri/: Cargo.toml  IMPLEMENTATION_CHECKLIST.md  MACOS_INTEGRATION_GUIDE.md  package.json  tauri.conf.json
src-tauri/src/: ai_analysis.rs  autonomous_monitor.rs  cleanup.rs  commands.rs  disk_analyzer.rs  lib.rs  main.rs  menu_bar.rs  project_purge.rs  system.rs  system_intelligence.rs  uninstaller.rs
src-tauri/src/macos_bridge/: mod.rs  network.rs  permissions.rs  power.rs  system.rs  thermal.rs
src/components/: AIIntelligence.jsx  AIIntelligence.tsx  AdvancedMonitor.jsx  AiInsights.tsx  AnomaliesSuggestionsPanel.tsx  BatteryOptimizer.jsx  BatteryOptimizer.tsx  CommandPalette.tsx  Dashboard.jsx  Dashboard.tsx  Dashboard.tsx.bak  DeepCleaner.jsx  DiskOptimizer.tsx  DuplicateFileFinder.jsx  DuplicateFileFinder.tsx  ErrorBoundary.tsx  Header.tsx  JunkCleaner.tsx  LoadingFallback.tsx  MaintenanceScheduler.jsx  MemoryChart.jsx  MemoryOptimizer.jsx  MetricsGrid.jsx  NetworkActivityChart.tsx  NetworkMonitor.jsx  NetworkMonitor.tsx  OneClickOptimize.tsx  OperationLogs.jsx  PageLayout.tsx  Performance.tsx  (+28 more)
(+35 files in other folders)
