[package]
name = "optimac-pro"
version = "1.0.0"
description = "Premium macOS System Optimization & Monitoring"
authors = ["OptiMac Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.8", features = ["devtools"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4.44", features = ["serde"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
